EXTRA_DIST += \
	demo/CMakeLists.txt

if WANT_DEMO

noinst_PROGRAMS += \
	demo/arg_parser_demo \
	demo/graph_to_eps_demo \
	demo/lgf_demo

endif WANT_DEMO

demo_arg_parser_demo_SOURCES = demo/arg_parser_demo.cc
demo_graph_to_eps_demo_SOURCES = demo/graph_to_eps_demo.cc
demo_lgf_demo_SOURCES = demo/lgf_demo.cc
